Parser/parser.output
Grammar

    0 $accept: program $end

    1 program: BEGIN stmt_list END

    2 stmt_list: stmt_list stmt
    3          | stmt

    4 stmt: declaration
    5     | assignment
    6     | cond_stmt
    7     | loop
    8     | jmp_stmt
    9     | print
   10     | ';'

   11 declaration: data_type id variables
   12            | data_type id '=' exp variables

   13 variables: comma id variables
   14          | comma id '=' exp variables
   15          | ';'

   16 assignment: id equal_sign exp semi

   17 cond_stmt: IF left_paren condition right_paren left_br stmt_list right_br else_stmt

   18 else_stmt: ELSE left_br stmt_list right_br
   19          | %empty

   20 loop: for_loop
   21     | while_loop
   22     | do_while_loop

   23 jmp_stmt: BREAK semi
   24         | CONTINUE semi

   25 print: PRINT exp semi

   26 for_loop: FOR left_paren loop_assignment semi condition semi loop_assignment right_paren left_br stmt_list right_br

   27 while_loop: WHILE left_paren condition right_paren left_br stmt_list right_br

   28 do_while_loop: DO left_br stmt_list right_br WHILE left_paren condition right_paren semi

   29 loop_assignment: assignment
   30                | %empty

   31 condition: exp relop exp

   32 exp: exp '+' exp2
   33    | exp '-' exp2
   34    | exp2

   35 exp2: exp2 '*' exp3
   36     | exp2 '/' exp3
   37     | exp2 '%' exp3
   38     | exp3

   39 exp3: left_paren exp right_paren
   40     | term

   41 term: ID
   42     | NUM

   43 id: ID

   44 data_type: INT
   45          | FLOAT

   46 semi: ';'
   47     | error

   48 equal_sign: '='
   49           | error

   50 comma: ','
   51      | error

   52 left_paren: '('
   53           | error

   54 right_paren: ')'
   55            | error

   56 left_br: '{'
   57        | error

   58 right_br: '}'
   59         | error

   60 relop: '<'
   61      | '>'
   62      | LEOP
   63      | GEOP
   64      | DEOP
   65      | NEOP
   66      | error


Terminals, with rules where they appear

$end (0) 0
'%' (37) 37
'(' (40) 52
')' (41) 54
'*' (42) 35
'+' (43) 32
',' (44) 50
'-' (45) 33
'/' (47) 36
';' (59) 10 15 46
'<' (60) 60
'=' (61) 12 14 48
'>' (62) 61
'{' (123) 56
'}' (125) 58
error (256) 47 49 51 53 55 57 59 66
BEGIN (258) 1
END (259) 1
IF (260) 17
ELSE (261) 18
BREAK (262) 23
CONTINUE (263) 24
PRINT (264) 25
FOR (265) 26
DO (266) 28
WHILE (267) 27 28
ID (268) 41 43
NUM (269) 42
INT (270) 44
FLOAT (271) 45
LEOP (272) 62
GEOP (273) 63
DEOP (274) 64
NEOP (275) 65


Nonterminals, with rules where they appear

$accept (35)
    on left: 0
program (36)
    on left: 1, on right: 0
stmt_list (37)
    on left: 2 3, on right: 1 2 17 18 26 27 28
stmt (38)
    on left: 4 5 6 7 8 9 10, on right: 2 3
declaration (39)
    on left: 11 12, on right: 4
variables (40)
    on left: 13 14 15, on right: 11 12 13 14
assignment (41)
    on left: 16, on right: 5 29
cond_stmt (42)
    on left: 17, on right: 6
else_stmt (43)
    on left: 18 19, on right: 17
loop (44)
    on left: 20 21 22, on right: 7
jmp_stmt (45)
    on left: 23 24, on right: 8
print (46)
    on left: 25, on right: 9
for_loop (47)
    on left: 26, on right: 20
while_loop (48)
    on left: 27, on right: 21
do_while_loop (49)
    on left: 28, on right: 22
loop_assignment (50)
    on left: 29 30, on right: 26
condition (51)
    on left: 31, on right: 17 26 27 28
exp (52)
    on left: 32 33 34, on right: 12 14 16 25 31 32 33 39
exp2 (53)
    on left: 35 36 37 38, on right: 32 33 34 35 36 37
exp3 (54)
    on left: 39 40, on right: 35 36 37 38
term (55)
    on left: 41 42, on right: 40
id (56)
    on left: 43, on right: 11 12 13 14 16
data_type (57)
    on left: 44 45, on right: 11 12
semi (58)
    on left: 46 47, on right: 16 23 24 25 26 28
equal_sign (59)
    on left: 48 49, on right: 16
comma (60)
    on left: 50 51, on right: 13 14
left_paren (61)
    on left: 52 53, on right: 17 26 27 28 39
right_paren (62)
    on left: 54 55, on right: 17 26 27 28 39
left_br (63)
    on left: 56 57, on right: 17 18 26 27 28
right_br (64)
    on left: 58 59, on right: 17 18 26 27 28
relop (65)
    on left: 60 61 62 63 64 65 66, on right: 31


State 0

    0 $accept: . program $end

    BEGIN  shift, and go to state 1

    program  go to state 2


State 1

    1 program: BEGIN . stmt_list END

    IF        shift, and go to state 3
    BREAK     shift, and go to state 4
    CONTINUE  shift, and go to state 5
    PRINT     shift, and go to state 6
    FOR       shift, and go to state 7
    DO        shift, and go to state 8
    WHILE     shift, and go to state 9
    ID        shift, and go to state 10
    INT       shift, and go to state 11
    FLOAT     shift, and go to state 12
    ';'       shift, and go to state 13

    stmt_list      go to state 14
    stmt           go to state 15
    declaration    go to state 16
    assignment     go to state 17
    cond_stmt      go to state 18
    loop           go to state 19
    jmp_stmt       go to state 20
    print          go to state 21
    for_loop       go to state 22
    while_loop     go to state 23
    do_while_loop  go to state 24
    id             go to state 25
    data_type      go to state 26


State 2

    0 $accept: program . $end

    $end  shift, and go to state 27


State 3

   17 cond_stmt: IF . left_paren condition right_paren left_br stmt_list right_br else_stmt

    error  shift, and go to state 28
    '('    shift, and go to state 29

    left_paren  go to state 30


State 4

   23 jmp_stmt: BREAK . semi

    error  shift, and go to state 31
    ';'    shift, and go to state 32

    semi  go to state 33


State 5

   24 jmp_stmt: CONTINUE . semi

    error  shift, and go to state 31
    ';'    shift, and go to state 32

    semi  go to state 34


State 6

   25 print: PRINT . exp semi

    error  shift, and go to state 28
    ID     shift, and go to state 35
    NUM    shift, and go to state 36
    '('    shift, and go to state 29

    exp         go to state 37
    exp2        go to state 38
    exp3        go to state 39
    term        go to state 40
    left_paren  go to state 41


State 7

   26 for_loop: FOR . left_paren loop_assignment semi condition semi loop_assignment right_paren left_br stmt_list right_br

    error  shift, and go to state 28
    '('    shift, and go to state 29

    left_paren  go to state 42


State 8

   28 do_while_loop: DO . left_br stmt_list right_br WHILE left_paren condition right_paren semi

    error  shift, and go to state 43
    '{'    shift, and go to state 44

    left_br  go to state 45


State 9

   27 while_loop: WHILE . left_paren condition right_paren left_br stmt_list right_br

    error  shift, and go to state 28
    '('    shift, and go to state 29

    left_paren  go to state 46


State 10

   43 id: ID .

    $default  reduce using rule 43 (id)


State 11

   44 data_type: INT .

    $default  reduce using rule 44 (data_type)


State 12

   45 data_type: FLOAT .

    $default  reduce using rule 45 (data_type)


State 13

   10 stmt: ';' .

    $default  reduce using rule 10 (stmt)


State 14

    1 program: BEGIN stmt_list . END
    2 stmt_list: stmt_list . stmt

    END       shift, and go to state 47
    IF        shift, and go to state 3
    BREAK     shift, and go to state 4
    CONTINUE  shift, and go to state 5
    PRINT     shift, and go to state 6
    FOR       shift, and go to state 7
    DO        shift, and go to state 8
    WHILE     shift, and go to state 9
    ID        shift, and go to state 10
    INT       shift, and go to state 11
    FLOAT     shift, and go to state 12
    ';'       shift, and go to state 13

    stmt           go to state 48
    declaration    go to state 16
    assignment     go to state 17
    cond_stmt      go to state 18
    loop           go to state 19
    jmp_stmt       go to state 20
    print          go to state 21
    for_loop       go to state 22
    while_loop     go to state 23
    do_while_loop  go to state 24
    id             go to state 25
    data_type      go to state 26


State 15

    3 stmt_list: stmt .

    $default  reduce using rule 3 (stmt_list)


State 16

    4 stmt: declaration .

    $default  reduce using rule 4 (stmt)


State 17

    5 stmt: assignment .

    $default  reduce using rule 5 (stmt)


State 18

    6 stmt: cond_stmt .

    $default  reduce using rule 6 (stmt)


State 19

    7 stmt: loop .

    $default  reduce using rule 7 (stmt)


State 20

    8 stmt: jmp_stmt .

    $default  reduce using rule 8 (stmt)


State 21

    9 stmt: print .

    $default  reduce using rule 9 (stmt)


State 22

   20 loop: for_loop .

    $default  reduce using rule 20 (loop)


State 23

   21 loop: while_loop .

    $default  reduce using rule 21 (loop)


State 24

   22 loop: do_while_loop .

    $default  reduce using rule 22 (loop)


State 25

   16 assignment: id . equal_sign exp semi

    error  shift, and go to state 49
    '='    shift, and go to state 50

    equal_sign  go to state 51


State 26

   11 declaration: data_type . id variables
   12            | data_type . id '=' exp variables

    ID  shift, and go to state 10

    id  go to state 52


State 27

    0 $accept: program $end .

    $default  accept


State 28

   53 left_paren: error .

    $default  reduce using rule 53 (left_paren)


State 29

   52 left_paren: '(' .

    $default  reduce using rule 52 (left_paren)


State 30

   17 cond_stmt: IF left_paren . condition right_paren left_br stmt_list right_br else_stmt

    error  shift, and go to state 28
    ID     shift, and go to state 35
    NUM    shift, and go to state 36
    '('    shift, and go to state 29

    condition   go to state 53
    exp         go to state 54
    exp2        go to state 38
    exp3        go to state 39
    term        go to state 40
    left_paren  go to state 41


State 31

   47 semi: error .

    $default  reduce using rule 47 (semi)


State 32

   46 semi: ';' .

    $default  reduce using rule 46 (semi)


State 33

   23 jmp_stmt: BREAK semi .

    $default  reduce using rule 23 (jmp_stmt)


State 34

   24 jmp_stmt: CONTINUE semi .

    $default  reduce using rule 24 (jmp_stmt)


State 35

   41 term: ID .

    $default  reduce using rule 41 (term)


State 36

   42 term: NUM .

    $default  reduce using rule 42 (term)


State 37

   25 print: PRINT exp . semi
   32 exp: exp . '+' exp2
   33    | exp . '-' exp2

    error  shift, and go to state 31
    ';'    shift, and go to state 32
    '+'    shift, and go to state 55
    '-'    shift, and go to state 56

    semi  go to state 57


State 38

   34 exp: exp2 .
   35 exp2: exp2 . '*' exp3
   36     | exp2 . '/' exp3
   37     | exp2 . '%' exp3

    '*'  shift, and go to state 58
    '/'  shift, and go to state 59
    '%'  shift, and go to state 60

    $default  reduce using rule 34 (exp)


State 39

   38 exp2: exp3 .

    $default  reduce using rule 38 (exp2)


State 40

   40 exp3: term .

    $default  reduce using rule 40 (exp3)


State 41

   39 exp3: left_paren . exp right_paren

    error  shift, and go to state 28
    ID     shift, and go to state 35
    NUM    shift, and go to state 36
    '('    shift, and go to state 29

    exp         go to state 61
    exp2        go to state 38
    exp3        go to state 39
    term        go to state 40
    left_paren  go to state 41


State 42

   26 for_loop: FOR left_paren . loop_assignment semi condition semi loop_assignment right_paren left_br stmt_list right_br

    ID  shift, and go to state 10

    $default  reduce using rule 30 (loop_assignment)

    assignment       go to state 62
    loop_assignment  go to state 63
    id               go to state 25


State 43

   57 left_br: error .

    $default  reduce using rule 57 (left_br)


State 44

   56 left_br: '{' .

    $default  reduce using rule 56 (left_br)


State 45

   28 do_while_loop: DO left_br . stmt_list right_br WHILE left_paren condition right_paren semi

    IF        shift, and go to state 3
    BREAK     shift, and go to state 4
    CONTINUE  shift, and go to state 5
    PRINT     shift, and go to state 6
    FOR       shift, and go to state 7
    DO        shift, and go to state 8
    WHILE     shift, and go to state 9
    ID        shift, and go to state 10
    INT       shift, and go to state 11
    FLOAT     shift, and go to state 12
    ';'       shift, and go to state 13

    stmt_list      go to state 64
    stmt           go to state 15
    declaration    go to state 16
    assignment     go to state 17
    cond_stmt      go to state 18
    loop           go to state 19
    jmp_stmt       go to state 20
    print          go to state 21
    for_loop       go to state 22
    while_loop     go to state 23
    do_while_loop  go to state 24
    id             go to state 25
    data_type      go to state 26


State 46

   27 while_loop: WHILE left_paren . condition right_paren left_br stmt_list right_br

    error  shift, and go to state 28
    ID     shift, and go to state 35
    NUM    shift, and go to state 36
    '('    shift, and go to state 29

    condition   go to state 65
    exp         go to state 54
    exp2        go to state 38
    exp3        go to state 39
    term        go to state 40
    left_paren  go to state 41


State 47

    1 program: BEGIN stmt_list END .

    $default  reduce using rule 1 (program)


State 48

    2 stmt_list: stmt_list stmt .

    $default  reduce using rule 2 (stmt_list)


State 49

   49 equal_sign: error .

    $default  reduce using rule 49 (equal_sign)


State 50

   48 equal_sign: '=' .

    $default  reduce using rule 48 (equal_sign)


State 51

   16 assignment: id equal_sign . exp semi

    error  shift, and go to state 28
    ID     shift, and go to state 35
    NUM    shift, and go to state 36
    '('    shift, and go to state 29

    exp         go to state 66
    exp2        go to state 38
    exp3        go to state 39
    term        go to state 40
    left_paren  go to state 41


State 52

   11 declaration: data_type id . variables
   12            | data_type id . '=' exp variables

    error  shift, and go to state 67
    ';'    shift, and go to state 68
    '='    shift, and go to state 69
    ','    shift, and go to state 70

    variables  go to state 71
    comma      go to state 72


State 53

   17 cond_stmt: IF left_paren condition . right_paren left_br stmt_list right_br else_stmt

    error  shift, and go to state 73
    ')'    shift, and go to state 74

    right_paren  go to state 75


State 54

   31 condition: exp . relop exp
   32 exp: exp . '+' exp2
   33    | exp . '-' exp2

    error  shift, and go to state 76
    LEOP   shift, and go to state 77
    GEOP   shift, and go to state 78
    DEOP   shift, and go to state 79
    NEOP   shift, and go to state 80
    '+'    shift, and go to state 55
    '-'    shift, and go to state 56
    '<'    shift, and go to state 81
    '>'    shift, and go to state 82

    relop  go to state 83


State 55

   32 exp: exp '+' . exp2

    error  shift, and go to state 28
    ID     shift, and go to state 35
    NUM    shift, and go to state 36
    '('    shift, and go to state 29

    exp2        go to state 84
    exp3        go to state 39
    term        go to state 40
    left_paren  go to state 41


State 56

   33 exp: exp '-' . exp2

    error  shift, and go to state 28
    ID     shift, and go to state 35
    NUM    shift, and go to state 36
    '('    shift, and go to state 29

    exp2        go to state 85
    exp3        go to state 39
    term        go to state 40
    left_paren  go to state 41


State 57

   25 print: PRINT exp semi .

    $default  reduce using rule 25 (print)


State 58

   35 exp2: exp2 '*' . exp3

    error  shift, and go to state 28
    ID     shift, and go to state 35
    NUM    shift, and go to state 36
    '('    shift, and go to state 29

    exp3        go to state 86
    term        go to state 40
    left_paren  go to state 41


State 59

   36 exp2: exp2 '/' . exp3

    error  shift, and go to state 28
    ID     shift, and go to state 35
    NUM    shift, and go to state 36
    '('    shift, and go to state 29

    exp3        go to state 87
    term        go to state 40
    left_paren  go to state 41


State 60

   37 exp2: exp2 '%' . exp3

    error  shift, and go to state 28
    ID     shift, and go to state 35
    NUM    shift, and go to state 36
    '('    shift, and go to state 29

    exp3        go to state 88
    term        go to state 40
    left_paren  go to state 41


State 61

   32 exp: exp . '+' exp2
   33    | exp . '-' exp2
   39 exp3: left_paren exp . right_paren

    error  shift, and go to state 73
    '+'    shift, and go to state 55
    '-'    shift, and go to state 56
    ')'    shift, and go to state 74

    right_paren  go to state 89


State 62

   29 loop_assignment: assignment .

    $default  reduce using rule 29 (loop_assignment)


State 63

   26 for_loop: FOR left_paren loop_assignment . semi condition semi loop_assignment right_paren left_br stmt_list right_br

    error  shift, and go to state 31
    ';'    shift, and go to state 32

    semi  go to state 90


State 64

    2 stmt_list: stmt_list . stmt
   28 do_while_loop: DO left_br stmt_list . right_br WHILE left_paren condition right_paren semi

    error     shift, and go to state 91
    IF        shift, and go to state 3
    BREAK     shift, and go to state 4
    CONTINUE  shift, and go to state 5
    PRINT     shift, and go to state 6
    FOR       shift, and go to state 7
    DO        shift, and go to state 8
    WHILE     shift, and go to state 9
    ID        shift, and go to state 10
    INT       shift, and go to state 11
    FLOAT     shift, and go to state 12
    ';'       shift, and go to state 13
    '}'       shift, and go to state 92

    stmt           go to state 48
    declaration    go to state 16
    assignment     go to state 17
    cond_stmt      go to state 18
    loop           go to state 19
    jmp_stmt       go to state 20
    print          go to state 21
    for_loop       go to state 22
    while_loop     go to state 23
    do_while_loop  go to state 24
    id             go to state 25
    data_type      go to state 26
    right_br       go to state 93


State 65

   27 while_loop: WHILE left_paren condition . right_paren left_br stmt_list right_br

    error  shift, and go to state 73
    ')'    shift, and go to state 74

    right_paren  go to state 94


State 66

   16 assignment: id equal_sign exp . semi
   32 exp: exp . '+' exp2
   33    | exp . '-' exp2

    error  shift, and go to state 31
    ';'    shift, and go to state 32
    '+'    shift, and go to state 55
    '-'    shift, and go to state 56

    semi  go to state 95


State 67

   51 comma: error .

    $default  reduce using rule 51 (comma)


State 68

   15 variables: ';' .

    $default  reduce using rule 15 (variables)


State 69

   12 declaration: data_type id '=' . exp variables

    error  shift, and go to state 28
    ID     shift, and go to state 35
    NUM    shift, and go to state 36
    '('    shift, and go to state 29

    exp         go to state 96
    exp2        go to state 38
    exp3        go to state 39
    term        go to state 40
    left_paren  go to state 41


State 70

   50 comma: ',' .

    $default  reduce using rule 50 (comma)


State 71

   11 declaration: data_type id variables .

    $default  reduce using rule 11 (declaration)


State 72

   13 variables: comma . id variables
   14          | comma . id '=' exp variables

    ID  shift, and go to state 10

    id  go to state 97


State 73

   55 right_paren: error .

    $default  reduce using rule 55 (right_paren)


State 74

   54 right_paren: ')' .

    $default  reduce using rule 54 (right_paren)


State 75

   17 cond_stmt: IF left_paren condition right_paren . left_br stmt_list right_br else_stmt

    error  shift, and go to state 43
    '{'    shift, and go to state 44

    left_br  go to state 98


State 76

   66 relop: error .

    $default  reduce using rule 66 (relop)


State 77

   62 relop: LEOP .

    $default  reduce using rule 62 (relop)


State 78

   63 relop: GEOP .

    $default  reduce using rule 63 (relop)


State 79

   64 relop: DEOP .

    $default  reduce using rule 64 (relop)


State 80

   65 relop: NEOP .

    $default  reduce using rule 65 (relop)


State 81

   60 relop: '<' .

    $default  reduce using rule 60 (relop)


State 82

   61 relop: '>' .

    $default  reduce using rule 61 (relop)


State 83

   31 condition: exp relop . exp

    error  shift, and go to state 28
    ID     shift, and go to state 35
    NUM    shift, and go to state 36
    '('    shift, and go to state 29

    exp         go to state 99
    exp2        go to state 38
    exp3        go to state 39
    term        go to state 40
    left_paren  go to state 41


State 84

   32 exp: exp '+' exp2 .
   35 exp2: exp2 . '*' exp3
   36     | exp2 . '/' exp3
   37     | exp2 . '%' exp3

    '*'  shift, and go to state 58
    '/'  shift, and go to state 59
    '%'  shift, and go to state 60

    $default  reduce using rule 32 (exp)


State 85

   33 exp: exp '-' exp2 .
   35 exp2: exp2 . '*' exp3
   36     | exp2 . '/' exp3
   37     | exp2 . '%' exp3

    '*'  shift, and go to state 58
    '/'  shift, and go to state 59
    '%'  shift, and go to state 60

    $default  reduce using rule 33 (exp)


State 86

   35 exp2: exp2 '*' exp3 .

    $default  reduce using rule 35 (exp2)


State 87

   36 exp2: exp2 '/' exp3 .

    $default  reduce using rule 36 (exp2)


State 88

   37 exp2: exp2 '%' exp3 .

    $default  reduce using rule 37 (exp2)


State 89

   39 exp3: left_paren exp right_paren .

    $default  reduce using rule 39 (exp3)


State 90

   26 for_loop: FOR left_paren loop_assignment semi . condition semi loop_assignment right_paren left_br stmt_list right_br

    error  shift, and go to state 28
    ID     shift, and go to state 35
    NUM    shift, and go to state 36
    '('    shift, and go to state 29

    condition   go to state 100
    exp         go to state 54
    exp2        go to state 38
    exp3        go to state 39
    term        go to state 40
    left_paren  go to state 41


State 91

   59 right_br: error .

    $default  reduce using rule 59 (right_br)


State 92

   58 right_br: '}' .

    $default  reduce using rule 58 (right_br)


State 93

   28 do_while_loop: DO left_br stmt_list right_br . WHILE left_paren condition right_paren semi

    WHILE  shift, and go to state 101


State 94

   27 while_loop: WHILE left_paren condition right_paren . left_br stmt_list right_br

    error  shift, and go to state 43
    '{'    shift, and go to state 44

    left_br  go to state 102


State 95

   16 assignment: id equal_sign exp semi .

    $default  reduce using rule 16 (assignment)


State 96

   12 declaration: data_type id '=' exp . variables
   32 exp: exp . '+' exp2
   33    | exp . '-' exp2

    error  shift, and go to state 67
    ';'    shift, and go to state 68
    '+'    shift, and go to state 55
    '-'    shift, and go to state 56
    ','    shift, and go to state 70

    variables  go to state 103
    comma      go to state 72


State 97

   13 variables: comma id . variables
   14          | comma id . '=' exp variables

    error  shift, and go to state 67
    ';'    shift, and go to state 68
    '='    shift, and go to state 104
    ','    shift, and go to state 70

    variables  go to state 105
    comma      go to state 72


State 98

   17 cond_stmt: IF left_paren condition right_paren left_br . stmt_list right_br else_stmt

    IF        shift, and go to state 3
    BREAK     shift, and go to state 4
    CONTINUE  shift, and go to state 5
    PRINT     shift, and go to state 6
    FOR       shift, and go to state 7
    DO        shift, and go to state 8
    WHILE     shift, and go to state 9
    ID        shift, and go to state 10
    INT       shift, and go to state 11
    FLOAT     shift, and go to state 12
    ';'       shift, and go to state 13

    stmt_list      go to state 106
    stmt           go to state 15
    declaration    go to state 16
    assignment     go to state 17
    cond_stmt      go to state 18
    loop           go to state 19
    jmp_stmt       go to state 20
    print          go to state 21
    for_loop       go to state 22
    while_loop     go to state 23
    do_while_loop  go to state 24
    id             go to state 25
    data_type      go to state 26


State 99

   31 condition: exp relop exp .
   32 exp: exp . '+' exp2
   33    | exp . '-' exp2

    '+'  shift, and go to state 55
    '-'  shift, and go to state 56

    $default  reduce using rule 31 (condition)


State 100

   26 for_loop: FOR left_paren loop_assignment semi condition . semi loop_assignment right_paren left_br stmt_list right_br

    error  shift, and go to state 31
    ';'    shift, and go to state 32

    semi  go to state 107


State 101

   28 do_while_loop: DO left_br stmt_list right_br WHILE . left_paren condition right_paren semi

    error  shift, and go to state 28
    '('    shift, and go to state 29

    left_paren  go to state 108


State 102

   27 while_loop: WHILE left_paren condition right_paren left_br . stmt_list right_br

    IF        shift, and go to state 3
    BREAK     shift, and go to state 4
    CONTINUE  shift, and go to state 5
    PRINT     shift, and go to state 6
    FOR       shift, and go to state 7
    DO        shift, and go to state 8
    WHILE     shift, and go to state 9
    ID        shift, and go to state 10
    INT       shift, and go to state 11
    FLOAT     shift, and go to state 12
    ';'       shift, and go to state 13

    stmt_list      go to state 109
    stmt           go to state 15
    declaration    go to state 16
    assignment     go to state 17
    cond_stmt      go to state 18
    loop           go to state 19
    jmp_stmt       go to state 20
    print          go to state 21
    for_loop       go to state 22
    while_loop     go to state 23
    do_while_loop  go to state 24
    id             go to state 25
    data_type      go to state 26


State 103

   12 declaration: data_type id '=' exp variables .

    $default  reduce using rule 12 (declaration)


State 104

   14 variables: comma id '=' . exp variables

    error  shift, and go to state 28
    ID     shift, and go to state 35
    NUM    shift, and go to state 36
    '('    shift, and go to state 29

    exp         go to state 110
    exp2        go to state 38
    exp3        go to state 39
    term        go to state 40
    left_paren  go to state 41


State 105

   13 variables: comma id variables .

    $default  reduce using rule 13 (variables)


State 106

    2 stmt_list: stmt_list . stmt
   17 cond_stmt: IF left_paren condition right_paren left_br stmt_list . right_br else_stmt

    error     shift, and go to state 91
    IF        shift, and go to state 3
    BREAK     shift, and go to state 4
    CONTINUE  shift, and go to state 5
    PRINT     shift, and go to state 6
    FOR       shift, and go to state 7
    DO        shift, and go to state 8
    WHILE     shift, and go to state 9
    ID        shift, and go to state 10
    INT       shift, and go to state 11
    FLOAT     shift, and go to state 12
    ';'       shift, and go to state 13
    '}'       shift, and go to state 92

    stmt           go to state 48
    declaration    go to state 16
    assignment     go to state 17
    cond_stmt      go to state 18
    loop           go to state 19
    jmp_stmt       go to state 20
    print          go to state 21
    for_loop       go to state 22
    while_loop     go to state 23
    do_while_loop  go to state 24
    id             go to state 25
    data_type      go to state 26
    right_br       go to state 111


State 107

   26 for_loop: FOR left_paren loop_assignment semi condition semi . loop_assignment right_paren left_br stmt_list right_br

    ID  shift, and go to state 10

    $default  reduce using rule 30 (loop_assignment)

    assignment       go to state 62
    loop_assignment  go to state 112
    id               go to state 25


State 108

   28 do_while_loop: DO left_br stmt_list right_br WHILE left_paren . condition right_paren semi

    error  shift, and go to state 28
    ID     shift, and go to state 35
    NUM    shift, and go to state 36
    '('    shift, and go to state 29

    condition   go to state 113
    exp         go to state 54
    exp2        go to state 38
    exp3        go to state 39
    term        go to state 40
    left_paren  go to state 41


State 109

    2 stmt_list: stmt_list . stmt
   27 while_loop: WHILE left_paren condition right_paren left_br stmt_list . right_br

    error     shift, and go to state 91
    IF        shift, and go to state 3
    BREAK     shift, and go to state 4
    CONTINUE  shift, and go to state 5
    PRINT     shift, and go to state 6
    FOR       shift, and go to state 7
    DO        shift, and go to state 8
    WHILE     shift, and go to state 9
    ID        shift, and go to state 10
    INT       shift, and go to state 11
    FLOAT     shift, and go to state 12
    ';'       shift, and go to state 13
    '}'       shift, and go to state 92

    stmt           go to state 48
    declaration    go to state 16
    assignment     go to state 17
    cond_stmt      go to state 18
    loop           go to state 19
    jmp_stmt       go to state 20
    print          go to state 21
    for_loop       go to state 22
    while_loop     go to state 23
    do_while_loop  go to state 24
    id             go to state 25
    data_type      go to state 26
    right_br       go to state 114


State 110

   14 variables: comma id '=' exp . variables
   32 exp: exp . '+' exp2
   33    | exp . '-' exp2

    error  shift, and go to state 67
    ';'    shift, and go to state 68
    '+'    shift, and go to state 55
    '-'    shift, and go to state 56
    ','    shift, and go to state 70

    variables  go to state 115
    comma      go to state 72


State 111

   17 cond_stmt: IF left_paren condition right_paren left_br stmt_list right_br . else_stmt

    ELSE  shift, and go to state 116

    $default  reduce using rule 19 (else_stmt)

    else_stmt  go to state 117


State 112

   26 for_loop: FOR left_paren loop_assignment semi condition semi loop_assignment . right_paren left_br stmt_list right_br

    error  shift, and go to state 73
    ')'    shift, and go to state 74

    right_paren  go to state 118


State 113

   28 do_while_loop: DO left_br stmt_list right_br WHILE left_paren condition . right_paren semi

    error  shift, and go to state 73
    ')'    shift, and go to state 74

    right_paren  go to state 119


State 114

   27 while_loop: WHILE left_paren condition right_paren left_br stmt_list right_br .

    $default  reduce using rule 27 (while_loop)


State 115

   14 variables: comma id '=' exp variables .

    $default  reduce using rule 14 (variables)


State 116

   18 else_stmt: ELSE . left_br stmt_list right_br

    error  shift, and go to state 43
    '{'    shift, and go to state 44

    left_br  go to state 120


State 117

   17 cond_stmt: IF left_paren condition right_paren left_br stmt_list right_br else_stmt .

    $default  reduce using rule 17 (cond_stmt)


State 118

   26 for_loop: FOR left_paren loop_assignment semi condition semi loop_assignment right_paren . left_br stmt_list right_br

    error  shift, and go to state 43
    '{'    shift, and go to state 44

    left_br  go to state 121


State 119

   28 do_while_loop: DO left_br stmt_list right_br WHILE left_paren condition right_paren . semi

    error  shift, and go to state 31
    ';'    shift, and go to state 32

    semi  go to state 122


State 120

   18 else_stmt: ELSE left_br . stmt_list right_br

    IF        shift, and go to state 3
    BREAK     shift, and go to state 4
    CONTINUE  shift, and go to state 5
    PRINT     shift, and go to state 6
    FOR       shift, and go to state 7
    DO        shift, and go to state 8
    WHILE     shift, and go to state 9
    ID        shift, and go to state 10
    INT       shift, and go to state 11
    FLOAT     shift, and go to state 12
    ';'       shift, and go to state 13

    stmt_list      go to state 123
    stmt           go to state 15
    declaration    go to state 16
    assignment     go to state 17
    cond_stmt      go to state 18
    loop           go to state 19
    jmp_stmt       go to state 20
    print          go to state 21
    for_loop       go to state 22
    while_loop     go to state 23
    do_while_loop  go to state 24
    id             go to state 25
    data_type      go to state 26


State 121

   26 for_loop: FOR left_paren loop_assignment semi condition semi loop_assignment right_paren left_br . stmt_list right_br

    IF        shift, and go to state 3
    BREAK     shift, and go to state 4
    CONTINUE  shift, and go to state 5
    PRINT     shift, and go to state 6
    FOR       shift, and go to state 7
    DO        shift, and go to state 8
    WHILE     shift, and go to state 9
    ID        shift, and go to state 10
    INT       shift, and go to state 11
    FLOAT     shift, and go to state 12
    ';'       shift, and go to state 13
